--- a/index.html
+++ b/index.html
@@ -389,7 +389,6 @@
              .page41 h1{
                 margin-left:40px;
                 font-size: 40px;
-                
             }
             .image41,.image42,.image43{
                 width:350px;
@@ -662,6 +661,7 @@
                 .page13{
                     max-width:355px;
                     margin-left:200px;
+                    margin-top:-100px;
                 }
                 .page2{
                     max-width:720px;
@@ -733,6 +733,9 @@
                 }
                 .page53 p,.page54 p,.page55 p{
                     width:400px;
+                }
+                .page54 p{
+                    margin-top:-12px;
                 }
                 .page53 h1,.page54 h1,.page55 h1{
                     margin-top:40px;
@@ -966,6 +969,9 @@
             .page53 p,.page54 p,.page55 p{
                 width:800px;
             }
+            .page54 p{
+                margin-top:-15px;
+            }
             .page53{
                 margin-top:2250px;
             }
@@ -1111,11 +1117,11 @@
     </style>
     <div class="page1">
         <video autoplay muted loop id="myVideo" loading="lazy">
-            <source src="images/video.mp4.mp4" type="video/mp4">
+            <source src="images/video2.mp4.mp4" type="video/mp4">
           </video>
         <div class="page12">
             <div class="logo">
-                <img src="images/page1.logo.png" width="117px" height="117px" >
+                <img src="images/logo2.png" width="200px" height="200px" >
             </div>
             <div class="bars" id="bars">
             <i class="fa fa-bars" onclick="tags()"></i>
@@ -1324,7 +1330,7 @@
             </ul>
         </div>
         <div class="page123">
-            <img class="img12" src="images/page1.logo.png" width="125px" height="125px">
+            <img class="img12" src="images/logo2.png" width="120px" height="120px">
         </div>
     </div>
     <style>
@@ -1531,7 +1537,7 @@
         }
         .page121{
             width:1370px;
-            height:100px;
+            height:130px;
             background-color: #120101;
             display: flex;
             justify-content: center;
@@ -1547,7 +1553,7 @@
         }
         .page123 img{
             margin-left:100%;
-            margin-top:-30px;
+            margin-top:0px;
         }
         img{
             transition: transform 0.3s ease;
