--- a/index.html
+++ b/index.html
@@ -1540,7 +1540,7 @@
             height:130px;
             background-color: #120101;
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
         }
         .page122 a{
             text-decoration: none;
@@ -1552,7 +1552,7 @@
             margin-top:10px;
         }
         .page123 img{
-            margin-left:-500px;
+            margin-left:100%;
             margin-top:0px;
         }
         img{
