--- a/index.html
+++ b/index.html
@@ -1114,6 +1114,10 @@
             z-index:-100;
             overflow-y: hidden;
         }
+        .logo{
+            width:100px;
+            height:100px;
+        }
     </style>
     <div class="page1">
         <video autoplay muted loop id="myVideo" loading="lazy">
@@ -1121,17 +1125,17 @@
           </video>
         <div class="page12">
             <div class="logo">
-                <img src="images/logo2.png" width="200px" height="200px" >
+                <img src="images/logo2.png" width="130px" height="130px" >
             </div>
             <div class="bars" id="bars">
             <i class="fa fa-bars" onclick="tags()"></i>
             </div>
             <div class="tags">
                 <ul style="list-style-type: none;">
-                    <li><a href="#">Home</li></a>
-                    <li><a href="index1.html">Contact</li></a>
+                    <li class="active"><a href="#">Home</li></a>
                     <li><a href="index3.html">Services</li></a>
-                    <li><a href="index2.html" >About</li></a>
+                    <li><a href="index2.html">About</li></a>
+                    <li><a href="index1.html" >Contact</li></a>
                 </ul>
                 <div class="call">
                     <a href="tel:918309112877">+918309112877</a>
