--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/20c5629a29.js" crossorigin="anonymous"></script>
     <title>About</title>
 </head>
 <body>
@@ -38,7 +43,6 @@ html {
   background-color: #474e5d;
   color: white;
 }
-
 .container {
   padding: 0 16px;
 }
@@ -52,61 +56,84 @@ html {
 .title {
   color: grey;
 }
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-}
-
-.button:hover {
-  background-color: #555;
-}
-
 @media screen and (max-width: 650px) {
   .column {
     width: 100%;
     display: block;
   }
 }
+.logo{
+  width:100px;
+  height:100px;
+}
+footer{
+      background-color: #706161;
+}
     </style>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+      <img src="images/logo2.png" class="logo">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index3.html">Services</a>
+              <a class="nav-link active" href="#">About</a>
+              <a class="nav-link" href="index1.html">Contact</a>
+          </div>
+      </div>
+  </div>
+</nav>
 <div class="about-section">
     <h1>About Us Page</h1>
     <p>HANVI'S is a full-service veterinary clinic Dedicated to providing High-quality medical care for pets in Hyderabad. Our
       clinic is staffed by a team of experienced veterinarians, veterinary technicians, and support staff who are passionate
       about animal health and well-being.</p>
-  </div>
+</div>
   <h2 style="text-align:center">Our Team</h2>
+<div class="container">
   <div class="row">
-    <div class="column">
-      <div class="card">
-        <img src="images/page6.png" alt="Mike" style="width:100%">
-        <div class="container">
-          <h2>Dr.Yashasvi Reddy</h2>
-          <p class="title">Veterinary Docter</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>mike@example.com</p>
-          <p><button class="button">Contact</button></p>
+      <div class="column">
+        <div class="card">
+          <img src="images/page6.png" alt="Mike" style="width:100%">
+          <div class="container">
+            <h2>Dr.Yashasvi Reddy</h2>
+            <p class="title">Veterinary Docter</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>mike@example.com</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="column">
-      <div class="card">
-        <img src="/w3images/team3.jpg" alt="John" style="width:100%">
-        <div class="container">
-          <h2>John Doe</h2>
-          <p class="title">Designer</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>john@example.com</p>
-          <p><button class="button">Contact</button></p>
+      <div class="column">
+        <div class="card">
+          <img src="/w3images/team3.jpg" alt="John" style="width:100%">
+          <div class="container">
+            <h2>John Doe</h2>
+            <p class="title">Designer</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>john@example.com</p>
+          </div>
         </div>
       </div>
-    </div>
+      <div class="column">
+        <div class="card">
+          <img src="/w3images/team3.jpg" alt="John" style="width:100%">
+          <div class="container">
+            <h2>John Doe</h2>
+            <p class="title">Designer</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>john@example.com</p>
+          </div>
+        </div>
+      </div>
   </div>
+</div>
+<footer>
+  <div class="container text-center">
+      <img src="images/logo2.png" class="logo">
+  </div>
+</footer>
 </body>
 </html>
