--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our SErvices</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/20c5629a29.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <style>
@@ -53,30 +58,36 @@ html {
 .title {
   color: grey;
 }
-
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-}
-
-.button:hover {
-  background-color: #555;
-}
-
 @media screen and (max-width: 650px) {
   .column {
     width: 100%;
     display: block;
   }
 }
+.logo{
+  width:100px;
+  height:100px;
+}
+footer{
+      background-color: #706161;
+}
     </style>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+      <img src="images/logo2.png" class="logo">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link active" href="#">Services</a>
+              <a class="nav-link" href="index2.html">About</a>
+              <a class="nav-link" href="index1.html">Contact</a>
+          </div>
+      </div>
+  </div>
+</nav>
 <div class="about-section">
     <h1>Our Services</h1>
     <p>Some text about who we are and what we do.</p>
@@ -84,6 +95,7 @@ html {
   </div>
   
   <h2 style="text-align:center">Services</h2>
+<div class="container-fluid">
   <div class="row">
     <div class="column">
       <div class="card">
@@ -97,16 +109,12 @@ html {
             <li>Minor and SoftTissue Surgeries</li>
             <li>Inpatient</li>
           </ul>
-          <!--<p class="title">CEO & Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>jane@example.com</p>
-          <p><button class="button">Contact</button></p>-->
         </div>
       </div>
     </div>
   
     <div class="column">
-      <div class="card">
+      <div class="card" style="min-height:600px;">
         <img src="images/image42.jpeg" alt="Mike" style="width:100%">
         <div class="container">
           <h2>Food</h2>
@@ -121,9 +129,8 @@ html {
         </div>
       </div>
     </div>
-    
     <div class="column">
-      <div class="card">
+      <div class="card text-center" style="min-height:600px;">
         <img src="images/image43.jpeg" alt="John" style="width:100%">
         <div class="container">
           <h2>PHARMACY</h2>
@@ -133,6 +140,39 @@ html {
         </div>
       </div>
     </div>
+    <div class="column">
+      <div class="card">
+        <img src="images/page53.jpeg" alt="John" style="width:100%">
+          <div class="container">
+              <h2>ACCESSORIES</h2>
+               <p>Bowls. ... Puppy crates, play pens and child gates. ... Clothing. ... Collars. ... Car harness, travelling crate or dog guard. ... Identity tag. ... Leads.</p>
+          </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="card" style="min-height:550px;">
+        <img src="images/page54.jpeg" alt="John" style="width:100%">
+          <div class="container">
+             <h2>GROOMING & BATHING</h2>
+              <p>Bathing accomplishes the basic tasks of cleaning your pet's coat and trimming nails and cleaning ears. While a good bath goes a long way, grooming provides those extra measures designed to really pamper your pet. Grooming also provides services not available with a traditional bath.</p>
+          </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="card" style="min-height:550px;">
+        <img src="images/page55.jpeg" alt="John" style="width:100%">
+          <div class="container">
+              <h2>OTHERS</h2>
+              <p>Shop everything pets need like food, treats and toys with FREE shipping over . Our services include dog wash, grooming, adoption.</p>
+          </div>
+      </div>
+    </div>
   </div>
+</div>
+  <footer>
+    <div class="container text-center">
+        <img src="images/logo2.png" class="logo">
+    </div>
+  </footer>
 </body>
 </html>
